# agent-environment

./: .buildinfo  .pre-commit-config.yaml  README.html  _config.yml  _toc.yml  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  version.py
.github/workflows/: format.yml  publish-book.yml
_sources/: README.md
_sources/docs/: DEV_GUIDE.md  Learning_resources.md
docs/: DEV_GUIDE.html  HowTo_JupyterBook.html  HowTo_JupyterBook.md  Learning_resources.html  StyleGuide.html  StyleGuide.md
