[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.yapf]
based_on_style = "google"
indent_width = 4

[tool.isort]
force_single_line = false
force_sort_within_sections = false
lexicographical = true
single_line_exclusions = ['typing']
order_by_type = false
group_by_package = true
skip = [
    "__init__.py",
    "third_party"
]

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length=100
