[metadata]
name = placeholder
version = 0.0.0rc1
author = file: AUTHORS.md
author_email = mackenzie@post.harvard.edu
description = Describe Your Package
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/AdaptiveMotorControlLab/WorkspaceTemplate
project_urls =
    Bug Tracker = https://github.com/AdaptiveMotorControlLab/WorkspaceTemplate/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
where =
    - .
    - tests
python_requires = >=3.9
install_requires =
    joblib
    scipy
    numpy;platform_system!="Windows" and python_version>="3.10"
    literate-dataclasses
    scikit-learn
    torch>=2.4.0
    tqdm
    matplotlib
    requests
    pandas

[options.extras_require]
docs =
    jupyter-book
    nbconvert
    ipykernel
    numpydoc

demos =
    ipykernel
    jupyter
    nbconvert

dev =
    pylint
    toml
    yapf
    black
    isort
    coverage
    pytest
    pytest-benchmark
    pytest-xdist
    pytest-timeout
    pytest-sphinx
    codespell
    cffconvert
